samples/_failures_safe/1761549781_aae49d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f38b6586.c: In function ‘matrix_transpose’:
./samples/SAFE/__tmp_f38b6586.c:111:5: error: expected expression at end of input
  111 |     matrix_init(result, m->cols,
      |     ^~~~~~~~~~~
./samples/SAFE/__tmp_f38b6586.c:111:5: error: expected declaration or statement at end of input
